Fix: div overlapping Pizza button

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,6 @@ a:hover {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
     height: 10%;
 }
 
